<resources>
    <string name="app_name">DC Guide</string>
    <string name="Places">Place</string>
    <string name="Hotels">Hotel</string>
    <string name="Restaurants">Eat</string>
    <string name="shops">Shopping</string>
    <string name="lincoln_memorial_place1_title">Lincoln Memorial</string>
    <string name="lincoln_memorial_place1_headline">The iconic memorial built to honor the 16th U.S. president is a must-see for every visitor to the nation’s capital.</string>
    <string name="lincoln_memorial_place1_sub_headline_1">Experiencing the Lincoln Memorial</string>
    <string name="lincoln_memorial_place1_sub_headline_1_info">The grand Lincoln Memorial towers over the Reflecting Pool, anchoring the western end of the National Mall. The best way to approach the memorial is from the east, by the Washington Monument and the National World War II Memorial. This will put you at the edge of the Reflecting Pool, a shimmering expanse which best illuminates the grand structures honoring our most storied leaders.\n\nTake a stroll toward the memorial and watch as it gradually gets larger. When you stand directly in front, gaze at the handsome marble columns surrounded by greenery, part of a design inspired by ancient Greek temples. There are 36 columns, each one representing one state in the U.S. at the date of President Lincoln’s death. The memorial itself is 190 feet long and 119 feet wide, and reaches a height of almost 100 feet.\nClimb the stairs leading to the interior, and look up. There, etched into the wall, is a memorable quote: "In this temple, as in the hearts of the people for whom he saved the Union, the memory of Abraham Lincoln is enshrined forever."</string>
    <string name="lincoln_memorial_place1_sub_headline_2">Lincoln Memorial hours and directions</string>
    <string name="lincoln_memorial_place1_sub_headline_2_info">The Lincoln Memorial is open 24 hours a day, every day of the year. Rangers are on duty from 9:30 a.m. to 10 p.m. daily. The easiest way to reach the Memorial is by Metrorail or Metrobus. The nearest Metro stations are Foggy Bottom and Smithsonian, both on the Orange, Blue and Silver lines. If traveling by Metrobus, take the 32, 34 or 36 routes. Capital Bikeshare also has a dock nearby, on Daniel French Drive SW. Find a schedule of events at the memorial to help plan your visit.</string>
    <string name="lincoln_memorial_place1_location">2 Lincoln Memorial Cir NW, Washington, DC 20037</string>
    <string name="martin_luther_place2_title"> Martin Luther King Jr Memorial</string>
    <string name="martin_luther_place2_headline">Everything you need to know about the national memorial to America’s greatest Civil Rights Movement leader.</string>
    <string name="martin_luther_place2_sub_headline_1">What is the Martin Luther King, Jr. Memorial and where is it?</string>
    <string name="martin_luther_place2_sub_headline_1_info">The Martin Luther King, Jr. Memorial is situated on a four-acre site along the National Mall\'s Tidal Basin, adjacent to the Franklin D. Roosevelt Memorial and shares a direct line of sight between the Lincoln and Jefferson memorials. Its official address is 1964 Independence Avenue SW, in honor of the Civil Rights Act of 1964, a landmark legislation in which King played an important role.\n\nDr. Martin Luther King, Jr. was one of the most prominent leaders of the Civil Rights Movement in the 1960s, becoming an iconic figure through his incredible speeches and his use of nonviolent resistance. He led the famous March on Washington in 1963, where he gave his legendary “I Have a Dream” speech on the steps of the Lincoln Memorial. Opened to the public in 2011, the memorial is the fourth in Washington, DC to honor a non-president and the first to honor a man of color. The site was designed as a lasting tribute to Dr. King’s legacy and will forever serve as a monument to the freedom, opportunity and justice for which he stood.</string>
    <string name="martin_luther_place2_sub_headline_2">Martin Luther King, Jr. Memorial hours and directions</string>
    <string name="martin_luther_place2_sub_headline_2_info">The most convenient way to reach the Martin Luther King, Jr. Memorial is by Metrobus or Metro. The closest Metro stop is Smithsonian, on the Orange, Blue and Silver lines. Of course, the memorial is in very close proximity to the other memorials surrounding the Tidal Basin.\n \nThe Martin Luther King, Jr. Memorial is open 24 hours a day, seven days a week. There is no fee to visit. National Park Service rangers are on site to answer questions from 9:30 a.m. to 10 p.m. daily. Interpretive programs are available throughout the day and upon request.</string>
    <string name="martin_luther_place2_location">1964 Independence Ave SW, Washington, DC 20024</string>
    <string name="jeff_mem_place3_title">Jefferson Memorial</string>
    <string name="jeff_mem_place3_headline">This gem on the National Mall is dedicated to Thomas Jefferson, the third U.S. president and author of the Declaration of Independence.</string>
    <string name="jeff_mem_place3_sub_headline_1">Where and what is the Jefferson Memorial?</string>
    <string name="jeff_mem_place3_sub_headline_1_info">The location and architecture of the Thomas Jefferson Memorial make it stand out among DC’s amazing array of monuments and memorials. Designed by John Russell Pope in 1925, the memorial resembles the Pantheon in Rome, an adaptation of Neoclassical architecture favored by Thomas Jefferson himself. Surrounded by water, the structure is located on the National Mall\'s Tidal Basin, a large body of water that is bordered by DC’s famous cherry blossom trees. On a moonlit night, the memorial creates a beautiful, shimmering image on the water, and in springtime, it’s joined by blooming cherry blossom trees.</string>
    <string name="jeff_mem_place3_sub_headline_2">Jefferson Memorial hours and directions</string>
    <string name="jeff_mem_place3_sub_headline_2_info">The Jefferson Memorial is open 24 hours a day, every day of the year. Rangers are on duty from 9:30 a.m. to 10 p.m. daily. The most convenient way to reach the memorial is by Metrorail or Metrobus. The closest Metro station is Smithsonian, located on the Orange, Blue and Silver lines. As for the bus, take either the 32, 34 or 36 routes.</string>
    <string name="jeff_mem_place3_location">701 E Basin Dr SW, Washington, DC 20242</string>
    <string name="lib_cong_place4_title">Library of Congress</string>
    <string name="lib_cong_place4_headline">The largest library in the world makes for a fascinating historical and literary experience in the nation’s capital.</string>
    <string name="lib_cong_place4_sub_headline1">The largest library in the world makes for a fascinating historical and literary experience in the nation’s capital.</string>
    <string name="lib_cong_place4_sub_headline1_info">The Library of Congress is housed across three buildings on Capitol Hill in Washington, DC: the Thomas Jefferson Building (10 1st Street SE), the James Madison Memorial Building (101 Independence Avenue SE) and the John Adams Building (2nd Street SE, between Independence Avenue and East Capitol Street). The library houses more than 164 million items, from books to photos to recordings to maps to…much, much more. It also serves as a museum, with numerous exhibits inside the incredible Thomas Jefferson Building.\n \nAll the Library of Congress’ buildings can be entered free of charge. The Thomas Jefferson Building is open from Monday – Saturday, 8:30 a.m. – 5 p.m. The building is closed every Sunday and on Thanksgiving Day, Christmas and New Year’s Day. The James Madison Memorial Building and the John Adams Building are primarily used for research – learn more about the Library of Congress’ buildings, including tours and current exhibitions, and check out the hours for reading rooms across the three buildings.\n\nThe easiest way to reach the Library of Congress is via Metrorail or the DC Circulator’s Union Station-Navy Yard Metro route. The closest Metro stop is Capitol South station on the Orange, Blue and Silver lines. Simply exit the station using the main exit and walk two blocks north on First Street SE. The Union Station-Navy Yard route stops on First Street, making for a short walk to the Library of Congress’ buildings.</string>
    <string name="lib_cong_place4_sub_headline2">What’s inside the Library of Congress?</string>
    <string name="lib_cong_place4_sub_headline2_info">The best visitor experience can be found inside the Library of Congress’ Thomas Jefferson Building. You will be dazzled upon walking in the door of the Jefferson Building. Gilded Age architecture makes its interior a visual masterpiece, a work of art worthy of housing the immense amount of knowledge that it holds. Once you’re done snapping photos for Instagram, it’s time to explore the building’s many exhibits.\n\nCurrently, seven of the Thomas Jefferson Building’s exhibits are ongoing. Here to Stay: The Legacy of George and Ira Gershwin reveals the lives of the sibling duo and their powerful influence on modern music. The Swann Gallery is a fun dive into political cartoons, comics, animation art and caricatures, while the Herblock Gallery reveals the imaginative work of political cartoonist Herbert L. Block. Thomas Jefferson’s Library is a stunning recreation of the Founding Father’s immense collection of books that founded the Library of Congress.\n\nExploring the Early Americas chronicles Native American culture and their conflict with Europeans. Notably, the exhibit features Martin Waldseemüller’s 1507 map of the world, the first to feature the word “America”. Hope for America: Performers, Politics and Pop Culture focuses on the career of Bob Hope and many other entertainers who have engaged with politics in their work, and how this intersection impacts American society. Mapping a Growing Nation: From Independence to Statehood showcases the first map of the independent U.S. compiled, printed and published in America by an American (his name was Abel Buell).</string>
    <string name="lib_cong_place4_location">101 Independence Ave SE, Washington, DC 20540</string>
    <string name="air_space_place5_title">National Air and Space Museum</string>
    <string name="air_space_place5_headline">Blast off at this popular free museum on the National Mall chronicling the history of aviation and space travel.</string>
    <string name="holiday_inn_hotel4_info">This Days Inn location is nestled in the heart of prestigious upper Northwest Washington, DC, just minutes from the National Zoo and 1 block from the Metro. Enjoy first-class service and unforgettable experiences, access to incredible historic landmarks, world-famous sightseeing, premier shopping and fine dining. Complete with two electrical vehicle charging stations in the covered garage area. </string>
    <string name="osteria_morini_restaurant1_info">Morini\'s menus offers a wide array of smaller plates and larger composed platters by Executive Chef, Matt Adler. White\’s signature pasta offerings are served with a variety of traditional ragus and delicately stuffed pastas from Emilia-Romagna. The wine list includes affordable wine selections focusing on the north central regions of Liguria, Umbria, Tuscany, Southern Lombardy, Emilia-Romagna and Le Marche, with sparkling wines like prosecco and lambrusco strongly represented.</string>
    <string name="asia_nine_restaurant5_timing">Monday-Thursday 11AM–10PM\nFriday 11AM–11PM\nSaturday 12–11PM\nSunday 4PM–9:30PM</string>
    <string name="city_center_dc_shop1_timing">Monday-Sunday 8AM–11PM</string>
    <string name="overview">overview</string>
    <string name="order_now">order now</string>
    <string name="book_now">book now</string>
    <string name="view_site">view site</string>
    <string name="make_call">Make Call</string>
    <string name="view_map">View Map</string>
</resources>