<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.HotelDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hotel_cover"
            style="@style/myCoverStyle"
            tools:src="@drawable/hilton_garden_inn_hotel" />

        <TextView
            style="@style/myHeadStyle"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/hotel_info_text_view"
            style="@style/myInfoStyle"
            tools:text="@string/holiday_inn_hotel4_info" />


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2">

            <android.support.design.button.MaterialButton
                android:id="@+id/hotel_location_button"
                style="@style/myMaterialButtonStyle"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/view_map"
                app:icon="@drawable/baseline_map_white_24dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/hotel_contact_button"
                style="@style/myMaterialButtonStyle"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/make_call"
                app:icon="@drawable/baseline_local_phone_white_24dp" />


            <android.support.design.button.MaterialButton
                android:id="@+id/hotel_booking_button"
                style="@style/myMaterialButtonStyle"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/book_now"
                app:icon="@drawable/baseline_hotel_white_24dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/hotel_site_button"
                style="@style/myMaterialButtonStyle"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/view_site"
                app:icon="@drawable/baseline_public_white_24dp" />

        </GridLayout>

    </LinearLayout>

</ScrollView>