<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.PlaceDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Activities.PlaceDetailsActivity">

        <ImageView
            android:id="@+id/place_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/lincoln_memorial_place" />

        <TextView
            android:id="@+id/place_head_line_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="cursive"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="italic"
            tools:text="@string/lincoln_memorial_place1_headline" />

        <TextView
            android:id="@+id/place_sub_head_1_text_view"
            style="@style/myHeadStyle"
            tools:text="@string/lincoln_memorial_place1_sub_headline_1" />

        <TextView
            android:id="@+id/place_sub_head_1_info_text_view"
            style="@style/myInfoStyle"
            tools:text="@string/lincoln_memorial_place1_sub_headline_1_info" />

        <TextView
            android:id="@+id/place_sub_head_2_text_view"
            style="@style/myHeadStyle"
            tools:text="@string/lincoln_memorial_place1_sub_headline_2" />

        <TextView
            android:id="@+id/place_sub_head_2_info_text_view"
            style="@style/myInfoStyle"
            tools:text="@string/lincoln_memorial_place1_sub_headline_2_info" />


    </LinearLayout>
</ScrollView>